<!--
  ~ Copyright (C) 2019 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">The Rick \'n Morty Quiz!</string>
    <string name="previous">&lt;</string>
    <string name="play_again">Play Again</string>
    <string name="you_scored">You Scored</string>
    <string name="title_text">The Rick \'n Morty Quiz!</string>
    <string name="play_button">Play</string>
    <string name="rdoTrue">True</string>
    <string name="rdoFalse">False</string>
    <string name="next">&gt;</string>
    <string name="word_is">The word is…</string>
    <string name="rules_title">Rules</string>
    <string name="about_title">About</string>
    <string name="question_1">The Rick &amp; Morty That The Show Follows Are Originally From Dimension C-173</string>
    <string name="question_2">Jerry\'s Station Wagon Is Based On The Car From National Lampoon\'s Vacation?</string>
    <string name="question_3">Rick &amp; Morty Have Appeared In The Opening Title Screen Of The Simpsons?</string>
    <string name="question_4">Jaguar From \'Pickle Rick\' Had His Own Spin Off Show With Adult Swim?</string>
    <string name="question_5">Two Brothers\' Is The First Show Rick &amp; Morty Watch On Inter-Dimensional Cable?</string>
    <string name="question_6">According To Dan Harmon, A Schmeckle Is Worth $148?</string>
    <string name="question_7">The Bloomflark Is The Universal Currency For The Galactic Federation?</string>
    <string name="question_8">When Bird-Person Is \'Reborn\' He Is Dubbed Phoenix-Bird?</string>
    <string name="question_9">Doctor Neon Bloom Runs Anatomy Park?</string>
    <string name="question_10">When Snuffles Is Able To Talk, He Changes His Name To Snowball?</string>
    <string name="question_11">"Wubba Lubba Dub Dub" Means \'Let\'s Party\'?</string>
    <string name="question_12">Leading Up To The First Episode, Rick Had Left Beth And The Family For 10 Year</string>
    <string name="question_13">In \'Total Rickall\', The Only Character That Isn\'t A Parasite Is Pencilvester?</string>
    <string name="question_14">Tammy Killed Bird-Person On Their Wedding Day?</string>
    <string name="question_15">When Being Scammed By The Zigereons, Rick\'s Safe Code Is \'1-3-5-3\'?</string>
    <string name="question_16">Ice-T\'s Real Name On Alphabetrium Was H2O-T?</string>
    <string name="question_17">When Jerry &amp; Beth Split Up, Jerry Enters A Relationship With A Krootabulan?</string>
    <string name="question_18">The Episode \'Something Ricked This Way\' Is A Parody Of An Edgar Allen Poe Poem</string>
    <string name="question_19">Rick\'s Hivemind Ex-Lover Is Called Purity?</string>
    <string name="question_20">The Conjoint Twin That Simultaneously Host The News &amp;v A Cooking Show Are Calle Michael &amp; Pichael?</string>
</resources>
